aadding font awesome icons

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "fetch": "^1.1.0",
     "chart.js": "^3.4.1",
+    "fetch": "^1.1.0",
     "http-proxy-middleware": "^1.0.5",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
