--- a/Pipfile
+++ b/Pipfile
@@ -25,7 +25,7 @@ python-dateutil = "==2.8.1"
 python-editor = "==1.0.4"
 greenlet = "==1.1.0"
 Mako = "==1.1.4"
-requests = "*"
+requests = "==2.26.0"
 
 [dev-packages]
 psycopg2-binary = "==2.8.6"
