--- a/react-app/package.json
+++ b/react-app/package.json
@@ -16,6 +16,7 @@
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-elements": "^3.4.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
