--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@
 
 -i https://pypi.org/simple
 alembic==1.6.5
+certifi==2021.5.30
+charset-normalizer==2.0.3; python_version >= '3'
 click==7.1.2
 flask-cors==3.0.8
 flask-login==0.5.0
@@ -16,6 +18,7 @@ flask-wtf==0.15.1
 flask==2.0.1
 greenlet==1.1.0
 gunicorn==20.1.0
+idna==3.2; python_version >= '3'
 itsdangerous==2.0.1
 jinja2==3.0.1
 mako==1.1.4
@@ -23,8 +26,9 @@ markupsafe==2.0.1
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
+requests==2.26.0
 six==1.15.0
 sqlalchemy==1.4.19
+urllib3==1.26.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 werkzeug==2.0.1
 wtforms==2.3.3
-requests==2.26.0
