--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Login to Heroku Container registry
       run: heroku container:login
     - name: Build and push
-      run: heroku container:push -a robinhood-clone-egjj web
+      run: heroku container:push -a robinhood-clone-jjeg web
     - name: Release
-      run: heroku container:release -a robinhood-clone-egjj web
+      run: heroku container:release -a robinhood-clone-jjeg web
 
